--- a/frontend/src/components/Cohorts/Cohorts.css
+++ b/frontend/src/components/Cohorts/Cohorts.css
@@ -21,6 +21,15 @@
   padding-left: 10px;
 }
 
+.chartModule {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
 .back:hover {
   background: #ffffff;
   border-radius: 2px;
@@ -28,6 +37,22 @@
   margin-left: 10px;
   padding-right: 10px;
   padding-left: 10px;
+}
+
+.buttonGoBack {
+  margin-top: 63px;
+  /* display: flex; */
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  border: solid #f9f9f9;
+  box-shadow: 1px 1px 1px 1px #f5f5f5;
+  padding: 10px;
+  border-radius: 3px;
+}
+
+.buttonGoBack:hover {
+  background-color: #5be57b;
 }
 
 #chartFilteredEthnicity {
@@ -199,8 +224,9 @@ h12 {
   font-weight: 500;
   text-transform: uppercase;
   margin-left: 40px;
-  margin-top: 106px;
-  font-size: 14px;
+  margin-top: 57px;
+  font-weight: 600 !important;
+  font-size: 13px !important;
   display: flex;
   align-content: center;
   justify-content: center;
@@ -222,12 +248,28 @@ h12 {
 
 .graphsDiv h3 {
   color: #e16e00;
+  width: 100vw;
   text-transform: uppercase;
   margin-top: 32px;
+  margin-bottom: 20px;
   font-size: 14px;
   display: flex;
+  align-content: space-around;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 160px;
+}
+.chartModule {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
   align-content: center;
   justify-content: center;
+  align-items: center;
+}
+.apexcharts-menu {
+  background-color: #27293d !important;
+  border: 0px;
 }
 
 .middle {
