--- a/frontend/src/components/Verifier/Verifier.css
+++ b/frontend/src/components/Verifier/Verifier.css
@@ -1,11 +1,12 @@
 .NavlinkVerifier {
   display: flex;
   align-content: center;
+  font-size: 14px;
+  align-content: center;
   /* justify-content: center; */
   /* margin-right: 20px; */
   /* width: 100%; */
-  width: 185px;
-  /* text-underline-offset: 2px; */
+  width: 204px;
   align-items: center;
   text-underline-offset: 2px;
   font-weight: 600;
@@ -122,7 +123,7 @@ h10 {
 }
 
 .copyLogo {
-  width: 20px;
+  width: 18px;
 }
 
 h11 {
