--- a/permissions/permissions-ui/templates/public.html
+++ b/permissions/permissions-ui/templates/public.html
@@ -63,7 +63,7 @@
                   <select id="datasets" name="datasets" multiple>
                     <option value="dataset1" selected="selected">dataset1</option>
                   </select>
-                  <button id="btnAdd">Add</button>
+                  <button id="btnAdd2">Add</button>
                   <label for="list">Public Datasets List:</label>
                   <select id="list" name="list" multiple>
                     {% for item in bash_out %}
@@ -131,6 +131,6 @@
     }
   
   </script>
-  <script src="media/app.js"></script>
+  <script src="media/app2.js"></script>
 </body>
 </html>
