--- a/permissions/permissions-ui/templates/registered.html
+++ b/permissions/permissions-ui/templates/registered.html
@@ -20,7 +20,7 @@
           <span class="navbar-text ">
             <img src="media/logo.png" alt="EGA" height="70px">
           </span>
-          <a class="navbar-brand " href="/"><h1 class="bi bi-patch-check display-6 mx-auto p-2 fw-bold ms-5" style="color: #239B56;">Beacon Verifier</h1></a>
+          <a class="navbar-brand " href="/"><h1 class="bi bi-kanban display-6 mx-auto p-2 fw-bold ms-5" style="color: #760509;"> Beacon Admin Page</h1></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -55,6 +55,7 @@
                 </button>
             </div>
             <div id="boxdatasets">
+              <div><h2 style="color: #760509;">Registered datasets manager</h2></div>
               <form method="post">
                 {% csrf_token %}
                   <label for="framework">Add a new user to the list:</label>
