--- a/permissions/permissions-ui/templates/controlled.html
+++ b/permissions/permissions-ui/templates/controlled.html
@@ -66,7 +66,7 @@
                   {% endfor %}
                 </select>
                 <button id="btnAdd2">Add</button>
-                <label for="list">Public Datasets List:</label>
+                <label for="list">Controlled Datasets List:</label>
                 <select id="list" name="list" multiple>
                   {% for item in bash_out %}
                   <option value="{{item}}" selected="selected">{{item}}</option>
