permissions UI modifications

--- a/permissions/permissions-ui/templates/base.html
+++ b/permissions/permissions-ui/templates/base.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <span class="navbar-text ">
-            <img src="media/logo.png" alt="EGA" height="70px">
+            <img class="logo" src="media/logo.png" alt="EGA" height="70px">
           </span>
           <a class="navbar-brand " href="/"><h1 class="bi bi-kanban display-6 mx-auto p-2 fw-bold ms-5" style="color: #760509;"> Beacon Admin Page</h1></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
