--- a/permissions/permissions-ui/media/mystyle.css
+++ b/permissions/permissions-ui/media/mystyle.css
@@ -334,9 +334,10 @@ table {
   justify-content: center;
 }
 
-#boxdatasets{
-  margin-left: 5vw;
+#boxdatasets {
+  margin-left: 7vw;
 }
+
 
 .col-3 {
   width: 100% !important;
@@ -485,8 +486,6 @@ table {
   padding: 4px;
 }
 
-
-
 .Btn {
   display: flex;
   align-items: center;
@@ -500,14 +499,15 @@ table {
   overflow: hidden;
   transition-duration: .3s;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
-  background-color: rgb(167, 19, 19);
+  background-color: #760509;
   margin-left: 60px;
+  margin-bottom: -50px;
 }
 
 /* plus sign */
 .sign {
   width: 100%;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -529,28 +529,28 @@ table {
   color: white;
   font-size: 1.2em;
   font-weight: 600;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
 }
 /* hover effect on button width */
 .Btn:hover {
   width: 125px;
   border-radius: 40px;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
 }
 
 .Btn:hover .sign {
   width: 30%;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
   padding-left: 20px;
 }
 /* hover effect button's text */
 .Btn:hover .text {
   opacity: 1;
   width: 70%;
-  transition-duration: .3s;
+  transition-duration: 0.3s;
   padding-right: 10px;
 }
 /* button click effect*/
 .Btn:active {
-  transform: translate(2px ,2px);
+  transform: translate(2px, 2px);
 }
