beacon admin page finished

--- a/permissions/permissions-ui/templates/controlled.html
+++ b/permissions/permissions-ui/templates/controlled.html
@@ -46,7 +46,7 @@
           d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
       </svg></div>
 
-    <div class="text">Back</div>
+    <a class="text" href="/">Back</a>
   </button>
   <div class="container pt-3 " style="font-size: 14px; ">
     <div class="col">
@@ -79,7 +79,9 @@
                 <div class="divPublicForm">
                   <label for="datasets">Dataset:</label>
                   <select id="datasets" name="datasets" multiple>
-                    <option value="dataset1" selected="selected">dataset1</option>
+                    {% for dataset in datasets %}
+                    <option value="{{dataset}}" selected="selected">{{dataset}}</option>
+                    {% endfor %}
                   </select>
                   <button id="btnAdd2"><img class="plusIcon" src="media/plus.png" alt="plusIcon" height="22px">
                     <img class="plusIconHover" src="media/plus-hover.png" alt="plusIconHover" height="22px"></button>
